
v1.4.6 "fiat lux":
 - Fix issue where 3hs would display a black screen at boot in some cases
 - Fix issue where 3hs would crash the system if the HOME button was pressed during an installation
 - Add a confirmation menu when a language is automatically detected that's not English

v1.4.5 "fiat lux":
 - Fix crash that would occur while installing with low battery, instead turning it into an error
 - Make log files not saved to the SD card by default

v1.4.4 "fiat lux":
 - Fix issue where cursor position would not be preserved in various situations
 - Fix issue where the incorrect subcategory contents would be loaded
 - General system stability improvements to enhance the user's experience

v1.4.3 "aequaora viridia":
 - Add a minimum system version requirement (that is, version 9.6.0)
 - Add information about the Virtual Console type in extended meta
 - Fix alphabetical sort taking the Virtual Console tag into account
 - Fix issue where changing the 3hs theme would sometimes instantly crash
 - Fix issue where updating the base game would first delete itself
 - Fix issue where theme images would be corrupted if music was first loaded
 - Fix issue where 3hs would crash when multiple network requests were pending
 - Fix an immediate 3hs crash when the audio configuration file was empty
 - Improve performance by using binary api data
 - Make quick search select only the console's region by default
 - General system stability improvements to enhance the user's experience

(v1.4.2 never happened)

v1.4.1 "aequaora viridia":
 - Fix issue where closing the lid while in the timeout screen would pause the download
 - Fix issue where 3hs would load only the dark, light and selected theme
 - Fix issue where 3hs would freeze or crash when sleep mode was triggered
 - Make quitting the app during an install or api requests possible via the HOME menu
 - Make the progress bar omit the ETA if it is not known
 - Improve stability of the api network requests