@@ -346,7 +346,7 @@ Ongeldig titel ID
 Bekijk de "Themes" categorie als je op zoek wilt naar thema's
 
 - enter_lgy_query
-Tik een classieke zoekopdracht in
+Tik een klassieke zoekopdracht in
 
 - no_other_params_tid
 Je kan geen andere parameters gebruiken wanneer je op titel ID zoekt
@@ -370,7 +370,7 @@ Ongelidge exclusie filters
 Er is een overlap tussen de filters
 
 - lgy_search
-Classieke zoekmethode
+Klassieke zoekmethode
 
 - sure_reset
 Weet je zeker dat je je instellingen wilt terugzetten?
@@ -615,4 +615,10 @@ Virtual Console type
 #  %1 = your language name
 - automatically_detected
 3hs heeft automatisch gedetecteerd dat de systeemtaal %1 is. Klik op UI_GLYPH_A om te bevestigen.
+
+- press_b_continue
+Klik op UI_GLYPH_B om verder te gaan.
+
+- error_occurred
+Een fout is opgetreden
 
