@@ -847,3 +847,11 @@ If you found hShop useful, please make a donation by visiting PAGE_DONATE on ano
 - automatically_detected
 3hs has automatically detected the system language is %1. Press UI_GLYPH_A to confirm.
 
+# This is used to dismiss an error screen
+- press_b_continue
+Press UI_GLYPH_B to continue.
+
+# This is displayed at the top of an error screen
+- error_occurred
+An error occurred
+
